assets/css/components/topicos.css
.topicos {
    background: var(--azul-degrade);
    text-align: center;
    padding: 1em;
}
.topicos__titulo {
    color: var(--branco);
    text-transform: uppercase;
    font-weight: 300;
    padding: 1.5em 0;
}
.topicos__lista {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
.topicos__item {
    margin: 2.5em 0.5em;
}
.topicos__link {
    background-color: var(--laranja);
    color: var(--branco);
    text-decoration: none;
    padding: 1em;
    font-size: 14px;
    font-weight: 700;
}

@media screen and (min-width: 1024px) {
    .topicos__titulo,
    .topicos__link {
        font-size: 24px;
    }

}

